--- a/package.json
+++ b/package.json
@@ -9,13 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-vector-icons/ionicons": "^7.4.0-alpha.27",
+    "@react-native-voice/voice": "^3.1.2",
+    "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.7.4",
     "expo": "~51.0.28",
+    "expo-dev-client": "^4.0.24",
     "expo-status-bar": "~1.12.1",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-tts": "^4.1.1",
+    "react-native-voice": "^0.3.0",
+    "toastify-react-native": "^5.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
