--- a/app.json
+++ b/app.json
@@ -1,41 +1,30 @@
 {
   "expo": {
-    "name": "LanguageTranslator",
-    "slug": "LanguageTranslator",
+    "name": "Woezor",
+    "slug": "Woezor",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/logo.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/icon.png",
+      "image": "./assets/logo.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
-      "supportsTablet": true,
-      "infoPlist": {
-        "NSMicrophoneUsageDescription": "Allow the app to access the microphone for speech recognition",
-        "NSSpeechRecognitionUsageDescription": "Allow the app to securely recognize user speech"
-      },
-      "bundleIdentifier": "oid"
+      "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/icon.png",
+        "foregroundImage": "./assets/logo.png",
         "backgroundColor": "#ffffff"
-      },
-      "package": "com.ashafa_ahmed.LanguageTranslator"
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    },
-    "plugins": [
-      "./withVoicePlugin"
-    ],
-    "extra": {
-      "eas": {
-        "projectId": "3877cb7b-b5a4-4124-8b0d-d45c561cba50"
-      }
     }
   }
 }
