--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "languagetranslator",
+  "name": "woezor",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,24 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-vector-icons/ionicons": "^7.4.0-alpha.27",
-    "@react-native-voice/voice": "^3.1.2",
-    "@react-navigation/native-stack": "^6.11.0",
-    "axios": "^1.7.4",
-    "expo": "~51.0.28",
-    "expo-dev-client": "^4.0.24",
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.4.1",
+    "@types/react": "~18.2.79",
+    "axios": "^1.7.7",
+    "expo": "^51.0.32",
+    "expo-av": "~14.0.7",
+    "expo-sharing": "~12.0.1",
     "expo-status-bar": "~1.12.1",
-    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-tts": "^4.1.1",
-    "react-native-voice": "^0.3.0",
-    "toastify-react-native": "^5.0.0"
+    "react-native": "^0.74.5",
+    "react-native-audio-recorder-player": "^3.5.3",
+    "react-native-element-dropdown": "^2.12.1",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.31.1",
+    "react-native-vector-icons": "^10.1.0",
+    "toastify-react-native": "^5.0.0",
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "tailwindcss": "^3.3.2"
+    "@babel/core": "^7.25.2"
   },
   "private": true
 }
