--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.4.1",
     "@types/react": "~18.2.79",
+    "assemblyai": "^4.7.0",
     "axios": "^1.7.7",
     "expo": "^51.0.32",
     "expo-av": "~14.0.7",
     "expo-sharing": "~12.0.1",
+    "expo-speech": "^12.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "^0.74.5",
