--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.7",
     "expo": "^51.0.32",
     "expo-av": "~14.0.7",
+    "expo-image-picker": "^15.0.7",
     "expo-sharing": "~12.0.1",
     "expo-speech": "^12.0.2",
     "expo-status-bar": "~1.12.1",
@@ -25,8 +26,10 @@
     "react-native": "^0.74.5",
     "react-native-audio-recorder-player": "^3.5.3",
     "react-native-element-dropdown": "^2.12.1",
+    "react-native-image-picker": "^7.1.2",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
+    "react-native-text-recognition": "^1.0.2",
     "react-native-vector-icons": "^10.1.0",
     "toastify-react-native": "^5.0.0",
     "typescript": "~5.3.3"
